--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - My Online Cookbook</title>
+    <link rel="manifest" href="/manifest.json">
     <meta name="description" content="The online cookbook of John Doe">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 105 55%22><text y=%22.9em%22 font-size=%2275%22>🍽️</text></svg>">
     <meta property="og:title" content="Home - My Online Cookbook" />
