--- a/index.html
+++ b/index.html
@@ -305,4 +305,9 @@
 <p>© John Doe 2023</p>
     </footer>
   </body>
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js', { scope: '/' });
+    }
+    </script>
 </html>
