--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   </body>
   <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/js/sw.js', { scope: '/js' });
+      navigator.serviceWorker.register('/js/sw.js');
     }
     </script>
 </html>
